--- a/tipCalculatorDelegate/tipCalculator/Base.lproj/Main.storyboard
+++ b/tipCalculatorDelegate/tipCalculator/Base.lproj/Main.storyboard
@@ -43,6 +43,9 @@
                                 <variation key="widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="183" y="72" width="197" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="calculateTapped:" destination="vXZ-lx-hvc" eventType="editingDidEnd" id="NOR-Ct-8Mx"/>
+                                </connections>
                             </textField>
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="6" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="BZB-Ts-1kR">
                                 <rect key="frame" x="190" y="110" width="112" height="31"/>
@@ -68,6 +71,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Tr2-HV-5ZP">
                                 <rect key="frame" x="0.0" y="224" width="320" height="344"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="vXZ-lx-hvc" id="j5b-5b-UKJ"/>
+                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="8oP-tN-qNd"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
