--- a/lab4_imageView/lab4_imageView/Base.lproj/Main.storyboard
+++ b/lab4_imageView/lab4_imageView/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Rft-gM-wRI">
                                 <rect key="frame" x="90" y="309" width="195" height="31"/>
                                 <connections>
-                                    <action selector="amoutSliderValueChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="2Pu-ud-LaM"/>
+                                    <action selector="amoutSliderValueChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="5Xu-jQ-mrM"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tyq-Yr-k57">
@@ -57,7 +57,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="UIImageCiew" destination="U69-mb-7EK" id="kmx-oy-OnX"/>
+                        <outlet property="UIImageCiew" destination="U69-mb-7EK" id="ylt-sb-xY6"/>
                         <outlet property="amountSlider" destination="Rft-gM-wRI" id="rvR-UJ-t0Q"/>
                         <outlet property="imageView" destination="U69-mb-7EK" id="l4C-DL-uN3"/>
                     </connections>
