--- a/examSegue/examSegue/Base.lproj/Main.storyboard
+++ b/examSegue/examSegue/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Unknow" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FNa-R1-nZB">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FNa-R1-nZB">
                                 <rect key="frame" x="0.0" y="164" width="375" height="184"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -137,7 +137,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="colorLabel" destination="yKT-fT-apf" id="cuv-R3-oHE"/>
-                        <outlet property="inputName" destination="aFt-an-4SR" id="cWo-r4-kLU"/>
+                        <outlet property="inputName" destination="aFt-an-4SR" id="OUP-Zi-9tA"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I2x-Xq-D8F" userLabel="First Responder" sceneMemberID="firstResponder"/>
